.kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsup
  labels:
    app: whatsup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatsup
  template:
    metadata:
      labels:
        app: whatsup
    spec:
      containers:
      - name: whatsup
        image: rogerkingcompass/whatsup:0.1.2
        ports:
        - containerPort: 7000
