.kube/service.yml
kind: Service
apiVersion: v1
metadata:
  name: whatsup
  labels:
    run: whatsup
spec:
  type: NodePort
  selector:
    app: whatsup
  ports:
  - protocol: TCP
    port: 7000
    targetPort: 7000
