.kube/ingress.yml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /
    name: local
    namespace: default
  spec:
    rules:
      - host: dev.local
        http:
          paths:
            - backend:
                serviceName: spin-deck
                servicePort: 9000
              path: /
      - host: dev.local
        http:
          paths:
            - backend:
                serviceName: whatsup
                servicePort: 7000
              path: /whatsup
